cnm/responsive/static/sass/cnmresponsive.scss
@import "cnmresponsive_variables";
@import "tiny_customs";

body {
  color: $default-font-color;
  @include arial;
}


a {
  color: $link-color;
}
a:visited {
  color: $visited-link-color;
}
#emergency-wrapper {
  background-color: $emergency-red;
  #emergency-width {
    @include fixed-width;
  }
  h1 {
    color: $emergency-font-color;
    border-color: #B94A48;
    border-width: 0;
    margin: 10px 0px;
    padding-bottom: 0px;
  }
  li {
    display: block;
    margin-bottom: 10px;
    a {
      display: block;
      color: $emergency-font-color;
      text-decoration: underline;
    }
  }
}
#header {
  @include fixed-width;
  padding: 20px 0;
  /*background-color: $cnmblue;*/
}
#navigation
{
  @include fixed-width;
}

#header-wrapper {
  background: $cnmblue url(img/CNM_web_header.png) no-repeat right top;
  //background-color: $cnmblue;
  color: $white;
}
#header-wrapper a {
  color: $white;
}


dl.actionMenu {
  background-color: #E3E3E3;
}

#portal-siteactions {
  text-align: right;
  @include lato;
  font-size: 14px;
  margin-bottom: 10px;
  li {
    margin-left: 20px;
  }
  a {
    @include font-icon-base(entypo);
    line-height: 20px;
  }
  a:before {
    font-size: 1.5em;
    margin-right: 0.2em;
  }
  #siteaction-chat-now a:before {
    content: "";
  }
  #siteaction-mycnm a:before {
    content: "🔒";
  }
  #siteaction-distance-learning a:before {
    content: "✎";
  }

  #siteaction-chat-now a {
    @extend %entypo-comment;
  }
  #siteaction-mycnm a {
    @extend %entypo-lock;
  }
  #siteaction-distance-learning a {
    @extend %entypo-pencil;
  }
}

/* Search */
#portal-searchbox {
    float: right; 
    margin: 1% 0 0 0; 
    width: 225px; 
    padding: 0;
    background: #fff;
    border: 1px solid $cnmblue;
    input[name="q"], #searchGadget {
        padding: 1.2% 0  1.1% 0;
        margin-right: 0.6%;
        text-indent: 2%;
        width: 85%;
        font-size:1.1em;
        background: transparent;
        border: none;
        color: #7fa3c7;
        font-style: italic;  
    }
    form, form .LSBox {
        font-size: 100%;
    }
    .searchButton {
        font-size:0.8em; 
        width: 10%; 
        padding:1.899% 0  1.2% 0; 
        text-align:center;
        text-indent: -1000em;
        background: transparent url(img/search-icon.png) no-repeat;
        border: none;
        cursor: pointer;
    }
}
#LSResult {z-index:9999; margin-top: 0.5%;}

/*Nav Bar*/
#nav-wrapper {
  background-color: $cnmyellow;
  
  #navigation {
    background-color: $cnmyellow;
  }
  .bootstrapStyles {
    a.brand {
      display: none;
      img {
        height: 40px;
      }
    }
    .navbar {
      margin-bottom: 0;
    }
    .navbar-inner {
      background-color: transparent;
      background-image: none;
      border-width: 0;
      @include border-radius(0);
      @include box-shadow(none);
      padding: 0;
    }
    ul.nav {
      margin: 0;
      //display: table;
      //width: 100%;
      > li {
        //display: table-cell;
        /* float: none; */ /* Breaks drop-down alignment */
        text-align: center;
        font-size: $navbar-font-size;
      }
    }
    .nav > li > a {
      @include text-shadow(none);
      padding: 20px 20px
    }
  }
  
  .dropdown-menu {
    text-align: left;
    > li > a {
      white-space: normal;
    }
  }
}
/* Nav Bar Drop Down */
/* Hiding arrow at top of nav bar drop down */
.bootstrapStyles {
  .navbar .nav > li > .dropdown-menu:before,
  .navbar .nav > li > .dropdown-menu:after
  {
    display: none;
  }
  .dropdown-menu {
    @include border-radius(0);
    background-color: $navbar-dropdown-background-color;
    border-width: 0px;
    padding: 0;
    margin: 0;
    /* Uncomment to remove box shadow from drop-downs */
    //@include box-shadow(none);
  }
  .dropdown-menu > li > a:hover,
  .dropdown-submenu:hover > a
  {
    background-color: $navbar-selected-background-color;
    background-image: none;
    color: $navbar-selected-font-color;
  }
  /* Bleeding through to mobile, so wrapping in a media query */
  @media only screen and (min-width: $min-width) {
    .dropdown-menu > li > a {
      color: $navbar-dropdown-font-color;
      font-size: $navbar-dropdown-font-size;
      border-top: 1px solid $navbar-dropdown-separator-color;
      padding: 5px 20px;
      width: 178px; /* Same width as left column */
    }
    .dropdown-menu > li:first-child > a {
      border-top-width: 0px;
    }
  }
}
/* Home icon for navigation */
ul.nav > li:first-child a {
  text-indent: -117px;
  white-space: nowrap;
  overflow: hidden;
  font-size: 35px;
  padding: 20px 1px !important;
  height: 20px;
}
ul.nav > li:first-child a:after {
  font-family: "entypo";
  font-style: normal;
  padding-left: 25px;
  content: "⌂";
}

/* Old Nav Bar */

#navigation {
  color: $heading-font-color;
  @include lato;
}
#portal-globalnav {
  display: table;
  width: 100%;
  li {
    display: table-cell;
    float: none;
  }
  li a {
    border-top-width: 0;
    line-height: 60px;
    text-align: center;
    display: block;
    font-size: 21px;
  }
}


/* Content Area */
#main {
  @include fixed-width;
  padding: 20px 0 80px 0;
}
#portal-breadcrumbs {
  font-size: 12px;
  line-height: 20px;
  margin-bottom: 40px;
}
body.portaltype-homepage #portal-breadcrumbs {
  display: none;
}
h1, h2, h3 {
  @include oswald;
  color: $heading-font-color;
  font-weight: normal;
}
h1 {
  font-size: $h1-font-size;
  border-bottom: 1px dotted $heading-font-color;
  line-height: 40px;
  margin: 20px 0px;
  padding-bottom: 19px; /* To make room for the 1px border at the bottom */
}
h2 {
  font-size: 20px;
  line-height: 40px;
  margin: 20px 0 10px 0;
}
h3 {
  font-size: 16px;
  line-height: 20px;
  margin: 20px 0 10px 0;
}
p {
  font-size: 14px;
  line-height: 20px;
  margin-bottom: 10px;
}
.documentDescription {
  @include lato;
  color: $description-font-color;
  font-size: 18px;
  line-height: 20px;
  margin-top: 10px;
  margin-bottom: 40px;
}
/* ... */

